; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/hvc/extr_hvc_console.c_hvc_tiocmget.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/hvc/extr_hvc_console.c_hvc_tiocmget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_struct = type { %struct.hvc_struct* }
%struct.hvc_struct = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.hvc_struct*)* }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tty_struct*)* @hvc_tiocmget to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hvc_tiocmget(%struct.tty_struct* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.tty_struct*, align 8
  %4 = alloca %struct.hvc_struct*, align 8
  store %struct.tty_struct* %0, %struct.tty_struct** %3, align 8
  %5 = load %struct.tty_struct*, %struct.tty_struct** %3, align 8
  %6 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %5, i32 0, i32 0
  %7 = load %struct.hvc_struct*, %struct.hvc_struct** %6, align 8
  store %struct.hvc_struct* %7, %struct.hvc_struct** %4, align 8
  %8 = load %struct.hvc_struct*, %struct.hvc_struct** %4, align 8
  %9 = icmp ne %struct.hvc_struct* %8, null
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = load %struct.hvc_struct*, %struct.hvc_struct** %4, align 8
  %12 = getelementptr inbounds %struct.hvc_struct, %struct.hvc_struct* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32 (%struct.hvc_struct*)*, i32 (%struct.hvc_struct*)** %14, align 8
  %16 = icmp ne i32 (%struct.hvc_struct*)* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %10, %1
  %18 = load i32, i32* @EINVAL, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %2, align 4
  br label %28

20:                                               ; preds = %10
  %21 = load %struct.hvc_struct*, %struct.hvc_struct** %4, align 8
  %22 = getelementptr inbounds %struct.hvc_struct, %struct.hvc_struct* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32 (%struct.hvc_struct*)*, i32 (%struct.hvc_struct*)** %24, align 8
  %26 = load %struct.hvc_struct*, %struct.hvc_struct** %4, align 8
  %27 = call i32 %25(%struct.hvc_struct* %26)
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %20, %17
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
